@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+16-Apr-2010 Mark Dexter
++ New test for JParameter merge to test merge bug with integer 0
+
 15-Apr-2010 Mark Dexter
 # Fix up some changed language strings
 # Fix doFrontendLogin to use config 
