@@ -27,6 +27,13 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+17-Apr-2010 Jean-Marie Simonet
+# Fixed [20169]. (Thanks Andrea]
+^ Added Title for accessibility [20171]. (Thanks Andrea]
+
+16-Apr-2010 Mark Dexter
+# Fix JParameter merge bug with integer zero param value (plus unit test for same)
+
 16-Apr-2010 Jean-Marie Simonet
 # Fixing mod_random_image (Thanks Dennis)
 # Fix translation of "ROOT" in parent field for categories (Thanks Dennis)
